--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "pp-worker",
     "version": "1.0.0",
     "description": "A tunnel for the edgetunnel project to allow deployed applications to cloudflare pages and workers to be accessed via a custom domain.",
-    "main": "_worker.js",
+    "main": "index.js",
     "scripts": {
         "deploy": "wrangler deploy",
         "build": "wrangler deploy --dry-run --outdir=minify --minify",
